--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Galaxi Logística</title>
+  <title>Catálogo - Galaxi Logística</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -18,6 +18,11 @@
     <a href="acerca.html">Acerca de</a>
     <a href="contacto.html">Contacto</a>
   </nav>
+
+  <div class="pdf-container">
+    <iframe src="Galexi_perfume_part1.pdf" width="100%" height="700px" style="border: none;"></iframe>
+    <iframe src="Galexi_perfume_part2.pdf" width="100%" height="700px" style="border: none; margin-top: 20px;"></iframe>
+  </div>
 
 </body>
 </html>
