--- a/home.html
+++ b/home.html
@@ -43,6 +43,21 @@
       }
     });
   </script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener("load", function () {
+      navigator.serviceWorker.register("sw.js").then(
+        function (registration) {
+          console.log("Service Worker registrado:", registration.scope);
+        },
+        function (err) {
+          console.log("Error al registrar el Service Worker:", err);
+        }
+      );
+    });
+  }
+</script>
+
 
 </body>
 </html>
