--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
       Ir al catálogo
     </button>
 
-    <button id="installBtn" class="btn-install" style="display: none;">
+    <button id="installBtn" class="btn-install" >
       Instalar aplicación
     </button>
   </div>
